--- a/Backend/patient-management/billing-service/src/main/resources/application.properties
+++ b/Backend/patient-management/billing-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=billing-service
+
+# Billign service will get Rest request on 4001 and grpc req on 9001
+server.port=4001 
+grpc.server.port=9001
