--- a/Backend/patient-management/patient-service/pom.xml
+++ b/Backend/patient-management/patient-service/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>protobuf-java</artifactId>
             <version>4.29.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
 
     </dependencies>
 
