updated patient service

--- a/Backend/patient-management/patient-service/pom.xml
+++ b/Backend/patient-management/patient-service/pom.xml
@@ -101,7 +101,16 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.7.Final</version> <!-- or whatever version you're using -->
+        </dependency>
     </dependencies>
 
 
