--- a/Backend/patient-management/patient-service/src/main/resources/application.properties
+++ b/Backend/patient-management/patient-service/src/main/resources/application.properties
@@ -22,19 +22,19 @@ server.port=4000
 #  all log messages should be written in terminal
 logging.level.root=info
 
-spring.datasource.url=jdbc:mysql://localhost:3306/patientdb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://mysqldb:3306/hospitaldb
+spring.datasource.username=hospital_user
+spring.datasource.password=hospital_user
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 # JWT
-jwt.secret=MySuperSecretKeyForJWTs@2025!Strong!!
-jwt.expiration=86400000
+#jwt.secret=MySuperSecretKeyForJWTs@2025!Strong!!
+#jwt.expiration=86400000
 
-# Swagger
-springdoc.api-docs.enabled=true
+
