--- a/Backend/patient-management/patient-service/src/main/resources/application.properties
+++ b/Backend/patient-management/patient-service/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.application.name=patient-service
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.fail-fast=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always 
