--- a/Backend/patient-management/api-gateway/src/main/resources/application.yml
+++ b/Backend/patient-management/api-gateway/src/main/resources/application.yml
@@ -42,10 +42,10 @@ spring:
   config:
     import: optional:configserver:http://localhost:8888
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
 
 management:
   endpoints:
@@ -54,4 +54,13 @@ management:
         include: "*"
   endpoint:
     health:
-      show-details: always 
+      show-details: always
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS}
+  instance:
+    hostname: ${HOSTNAME}.eureka
