--- a/Backend/patient-management/appointment-service/src/main/resources/application.properties
+++ b/Backend/patient-management/appointment-service/src/main/resources/application.properties
@@ -3,6 +3,12 @@ server.port=8084
 spring.application.name=appointment-service
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.fail-fast=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+eureka.instance.hostname=${HOSTNAME}
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
