--- a/Backend/patient-management/config-server/src/main/resources/application.properties
+++ b/Backend/patient-management/config-server/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port=8888
 spring.application.name=config-server
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=file:///home/bhavya/Documents/SPE_Major_Project/Backend/patient-management/config-repo
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+eureka.instance.hostname=${HOSTNAME}
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
