--- a/Backend/patient-management/patient-service/pom.xml
+++ b/Backend/patient-management/patient-service/pom.xml
@@ -52,6 +52,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -63,4 +70,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project> 
