--- a/Backend/patient-management/patient-service/src/main/resources/application.properties
+++ b/Backend/patient-management/patient-service/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.config.import=configserver:
 server.port=8082
 spring.application.name=patient-service
-spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.fail-fast=true
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.cloud.config.uri=http://config-server.default.svc.cluster.local:8888
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always 
