K8s Manifest files created

--- a/Backend/patient-management/config-server/src/main/resources/application.properties
+++ b/Backend/patient-management/config-server/src/main/resources/application.properties
@@ -8,3 +8,10 @@ eureka.client.fetch-registry=true
 
 eureka.instance.hostname=${HOSTNAME}
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
+
+
+
+spring.cloud.config.server.git.uri=https://github.com/bhavya28122251/SPE_Major_Project.git
+spring.cloud.config.server.git.search-paths=Backend/patient-management/config-repo
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
