--- a/Backend/patient-management/config-server/src/main/resources/application.properties
+++ b/Backend/patient-management/config-server/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.cloud.config.server.git.uri=https://github.com/bhavya28122251/SPE_Major_P
 spring.cloud.config.server.git.search-paths=Backend/patient-management/config-repo
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
+-Dspring.profiles.active=shared-database
