K8s Manifest files created

--- a/Backend/patient-management/config-repo/auth-service.properties
+++ b/Backend/patient-management/config-repo/auth-service.properties
@@ -1,6 +1,6 @@
 server.port=8081
 spring.application.name=auth-service
-spring.config.import=optional:shared-database.properties
+spring.config.import=optional:application-shared-database.properties
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
