--- a/K8s/common-config.yml
+++ b/K8s/common-config.yml
@@ -5,7 +5,7 @@ metadata:
 data:
   EUREKA_SERVER_ADDRESS: "http://eureka-0.eureka.default.svc.cluster.local:8761/eureka/"
   SPRING_CLOUD_CONFIG_URI: "http://config-server-svc.default.svc.cluster.local"
-  SPRING_PROFILES_ACTIVE: "default,shared-database"
+  #SPRING_PROFILES_ACTIVE: "default,appshared-database"
   # SPRING_DATASOURCE_URL: "jdbc:mysql://mysql-svc.default.svc.cluster.local:3306/healthcare_db"
   # SPRING_DATASOURCE_DRIVER_CLASS_NAME: "com.mysql.cj.jdbc.Driver"
   # SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
