--- a/K8s/patient-service.yml
+++ b/K8s/patient-service.yml
@@ -1,5 +1,5 @@
 
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: patient-service-app
@@ -34,11 +34,11 @@ spec:
                   name: common-config
                   key: EUREKA_SERVER_ADDRESS
 
-            # - name: SPRING_PROFILES_ACTIVE
-            #   valueFrom:
-            #     configMapKeyRef:
-            #       name: common-config
-            #       key: SPRING_PROFILES_ACTIVE
+            - name: SPRING_PROFILES_ACTIVE
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_PROFILES_ACTIVE
             
 
             # - name: SPRING_DATASOURCE_URL
