K8s Manifest files created

--- a/K8s/common-config.yml
+++ b/K8s/common-config.yml
@@ -5,10 +5,9 @@ metadata:
 data:
   EUREKA_SERVER_ADDRESS: "http://eureka-0.eureka.default.svc.cluster.local:8761/eureka/"
   SPRING_CLOUD_CONFIG_URI: "http://config-server-svc.default.svc.cluster.local"
-  SPRING_PROFILES_ACTIVE: "default,application-shared-database"
-  # SPRING_DATASOURCE_URL: "jdbc:mysql://mysql-svc.default.svc.cluster.local:3306/healthcare_db"
-  # SPRING_DATASOURCE_DRIVER_CLASS_NAME: "com.mysql.cj.jdbc.Driver"
-  # SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
-  # SPRING_JPA_SHOW_SQL: "true"
-  # SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: "true"
-  # SPRING_JPA_DATABASE_PLATFORM: "org.hibernate.dialect.MySQLDialect"
+  SPRING_DATASOURCE_URL: "jdbc:mysql://mysql-svc.default.svc.cluster.local:3306/healthcare_db"
+  SPRING_DATASOURCE_DRIVER_CLASS_NAME: "com.mysql.cj.jdbc.Driver"
+  SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
+  SPRING_JPA_SHOW_SQL: "true"
+  SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: "true"
+  SPRING_JPA_DATABASE_PLATFORM: "org.hibernate.dialect.MySQLDialect"
