--- a/K8s/common-secret.yml
+++ b/K8s/common-secret.yml
@@ -4,5 +4,6 @@ metadata:
   name: common-secret
 type: Opaque
 stringData:
-  SPRING_DATASOURCE_USERNAME: "root"
-  SPRING_DATASOURCE_PASSWORD: "root"
+  SPRING_DATASOURCE_USERNAME: cm9vdA==
+  SPRING_DATASOURCE_PASSWORD: cm9vdA==
+
