--- a/Backend/patient-management/config-server/src/main/resources/application.properties
+++ b/Backend/patient-management/config-server/src/main/resources/application.properties
@@ -1,19 +1,22 @@
 server.port=8888
 spring.application.name=config-server
-#spring.profiles.active=native
-spring.profiles.active=git
-#spring.cloud.config.server.native.search-locations=file:///home/bhavya/Documents/SPE_Major_Project/Backend/patient-management/config-repo
+spring.profiles.active=shared-database
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
 eureka.instance.hostname=${HOSTNAME}
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
+# MySQL Datasource for Config Server
+spring.datasource.url=jdbc:mysql://mysql-svc.default.svc.cluster.local:3306/healthcare_db
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.cloud.config.server.git.uri=https://github.com/bhavya28122251/SPE_Major_Project.git
-spring.cloud.config.server.git.search-paths=Backend/patient-management/config-repo
-spring.cloud.config.server.git.clone-on-start=true
-spring.cloud.config.server.git.default-label=main
-#-Dspring.profiles.active=shared-database
+# Uncomment if using JDBC backend for config server
+# spring.cloud.config.server.jdbc.sql=SELECT PROPERTY_KEY, PROPERTY_VALUE from PROPERTIES WHERE APPLICATION=? and PROFILE=? and LABEL=?
