K8s Manifest files updated

--- a/K8s/mysql-secret.yml
+++ b/K8s/mysql-secret.yml
@@ -4,6 +4,7 @@ metadata:
   name: common-secret
 type: Opaque
 stringData:
-  SPRING_DATASOURCE_USERNAME: cm9vdA==
-  SPRING_DATASOURCE_PASSWORD: cm9vdA==
+  mysql-root-password: cm9vdA==
+  mysql-user: cm9vdA==
+  mysql-password: cm9vdA==
 
