--- a/Backend/patient-management/config-repo/application-shared-database.properties
+++ b/Backend/patient-management/config-repo/application-shared-database.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/healthcare_db
+spring.datasource.url=dbc:mysql-svc://mysql:3306/shared_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
