--- a/K8s/mysql-secret.yml
+++ b/K8s/mysql-secret.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: common-secret
+  name: mysql-secret
 type: Opaque
 stringData:
   mysql-root-password: cm9vdA==
