K8s Manifest files updated

--- a/K8s/config-server.yml
+++ b/K8s/config-server.yml
@@ -26,46 +26,46 @@ spec:
                 configMapKeyRef:
                   name: common-config
                   key: EUREKA_SERVER_ADDRESS
-            - name: SPRING_DATASOURCE_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_DATASOURCE_URL
-            - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_DATASOURCE_DRIVER_CLASS_NAME
-            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_JPA_HIBERNATE_DDL_AUTO
-            - name: SPRING_JPA_SHOW_SQL
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_JPA_SHOW_SQL
-            - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
-            - name: SPRING_JPA_DATABASE_PLATFORM
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_JPA_DATABASE_PLATFORM
-            - name: SPRING_DATASOURCE_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: common-secret
-                  key: SPRING_DATASOURCE_USERNAME
-            - name: SPRING_DATASOURCE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: common-secret
-                  key: SPRING_DATASOURCE_PASSWORD
+            # - name: SPRING_DATASOURCE_URL
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: common-config
+            #       key: SPRING_DATASOURCE_URL
+            # - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: common-config
+            #       key: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+            # - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: common-config
+            #       key: SPRING_JPA_HIBERNATE_DDL_AUTO
+            # - name: SPRING_JPA_SHOW_SQL
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: common-config
+            #       key: SPRING_JPA_SHOW_SQL
+            # - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: common-config
+            #       key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+            # - name: SPRING_JPA_DATABASE_PLATFORM
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: common-config
+            #       key: SPRING_JPA_DATABASE_PLATFORM
+            # - name: SPRING_DATASOURCE_USERNAME
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: common-secret
+            #       key: SPRING_DATASOURCE_USERNAME
+            # - name: SPRING_DATASOURCE_PASSWORD
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: common-secret
+            #       key: SPRING_DATASOURCE_PASSWORD
 
 
 ---
