--- a/K8s/mysql.yaml
+++ b/K8s/mysql.yaml
@@ -39,7 +39,7 @@ spec:
       volumes:
         - name: mysql-storage
           persistentVolumeClaim:
-            claimName: mysql-pvc
+            claimName: mysql-pvc-new
 
 ---
 
