--- a/Backend/patient-management/config-server/src/main/resources/application.properties
+++ b/Backend/patient-management/config-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8888
 spring.application.name=config-server
-#spring.profiles.active=native
+spring.profiles.active=application-s
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
