--- a/Backend/patient-management/config-repo/patient-service.properties
+++ b/Backend/patient-management/config-repo/patient-service.properties
@@ -1,6 +1,14 @@
 server.port=8082
 spring.application.name=patient-service
-spring.config.import=optional:application-shared-database.properties
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always 
+spring.datasource.url=dbc:mysql-svc://mysql:3306/healthcare_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.config.import=optional:application-shared-database.properties
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
