--- a/K8s/mysql.yaml
+++ b/K8s/mysql.yaml
@@ -16,11 +16,13 @@ spec:
         - name: mysql
           image: mysql:8
           env:
+            # - name: MYSQL_ROOT_PASSWORD
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: mysql-secret
+            #       key: mysql-root-password
             - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: mysql-root-password
+              value: mysecret123
             - name: MYSQL_USER
               valueFrom:
                 secretKeyRef:
