--- a/K8s/mysql-secret.yml
+++ b/K8s/mysql-secret.yml
@@ -4,7 +4,7 @@ metadata:
   name: mysql-secret
 type: Opaque
 stringData:
-  mysql-root-password: cm9vdA==
-  mysql-user: cm9vdA==
-  mysql-password: cm9vdA==
+  SPRING_ROOT_PASSWORD: "mysecret123"
+  SPRING_DATASOURCE_PASSWORD: "root"
+  SPRING_DATASOURCE_USERNAME: "root"
 
