--- a/K8s/mysql.yaml
+++ b/K8s/mysql.yaml
@@ -27,12 +27,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: mysql-secret
-                  key: mysql-user
+                  key: SPRING_DATASOURCE_USERNAME
             - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: mysql-secret
-                  key: mysql-password
+                  key: SPRING_DATASOURCE_PASSWORD
           ports:
             - containerPort: 3306
           volumeMounts:
