--- a/K8s/patient-service.yml
+++ b/K8s/patient-service.yml
@@ -22,11 +22,11 @@ spec:
           ports:
             - containerPort: 8082
           env:
-            - name: SPRING_CLOUD_CONFIG_URI
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_CLOUD_CONFIG_URI
+            # - name: SPRING_CLOUD_CONFIG_URI
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: common-config
+            #       key: SPRING_CLOUD_CONFIG_URI
 
             - name: EUREKA_SERVER_ADDRESS
               valueFrom:
@@ -41,53 +41,58 @@ spec:
             #       key: SPRING_PROFILES_ACTIVE
             
 
-            # - name: SPRING_DATASOURCE_URL
-            #   valueFrom:
-            #     configMapKeyRef:
-            #       name: common-config
-            #       key: SPRING_DATASOURCE_URL
+            - name: SPRING_DATASOURCE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_DATASOURCE_URL
 
-            # - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
-            #   valueFrom:
-            #     configMapKeyRef:
-            #       name: common-config
-            #       key: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+            - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_DATASOURCE_DRIVER_CLASS_NAME
 
-            # - name: SPRING_JPA_HIBERNATE_DDL_AUTO
-            #   valueFrom:
-            #     configMapKeyRef:
-            #       name: common-config
-            #       key: SPRING_JPA_HIBERNATE_DDL_AUTO
+            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_HIBERNATE_DDL_AUTO
 
-            # - name: SPRING_JPA_SHOW_SQL
-            #   valueFrom:
-            #     configMapKeyRef:
-            #       name: common-config
-            #       key: SPRING_JPA_SHOW_SQL
+            - name: SPRING_JPA_SHOW_SQL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_SHOW_SQL
 
-            # - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
-            #   valueFrom:
-            #     configMapKeyRef:
-            #       name: common-config
-            #       key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+            - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
 
-            # - name: SPRING_JPA_DATABASE_PLATFORM
-            #   valueFrom:
-            #     configMapKeyRef:
-            #       name: common-config
-            #       key: SPRING_JPA_DATABASE_PLATFORM
+            - name: SPRING_JPA_DATABASE_PLATFORM
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_DATABASE_PLATFORM
 
-            # - name: SPRING_DATASOURCE_USERNAME
-            #   valueFrom:
-            #     secretKeyRef:
-            #       name: common-secret
-            #       key: SPRING_DATASOURCE_USERNAME
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: SPRING_DATASOURCE_USERNAME
 
-            # - name: SPRING_DATASOURCE_PASSWORD
-            #   valueFrom:
-            #     secretKeyRef:
-            #       name: common-secret
-            #       key: SPRING_DATASOURCE_PASSWORD
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: SPRING_DATASOURCE_PASSWORD
+            - name: SPRING_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: SPRING_ROOT_PASSWORD
            
             
 
