--- a/Backend/patient-management/patient-service/src/main/resources/application.properties
+++ b/Backend/patient-management/patient-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.config.import=configserver:
+#spring.config.import=configserver:
+spring.cloud.config.enabled=false
+
 server.port=8082
 spring.application.name=patient-service
 #spring.cloud.config.uri=http://localhost:8888
