--- a/K8s/mysql-secret.yml
+++ b/K8s/mysql-secret.yml
@@ -3,8 +3,9 @@ kind: Secret
 metadata:
   name: mysql-secret
 type: Opaque
-stringData:
-  SPRING_ROOT_PASSWORD: "mysecret123"
-  SPRING_DATASOURCE_PASSWORD: "root"
-  SPRING_DATASOURCE_USERNAME: "root"
+data:
+  mysql-root-password: bXlzZWNyZXQxMjM=
+  password: bXlzZWNyZXQxMjM=
+  username: cm9vdA==
+
 
