--- a/Backend/patient-management/appointment-service/src/main/resources/application.properties
+++ b/Backend/patient-management/appointment-service/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.config.import=configserver:
+#spring.config.import=configserver:
+spring.cloud.config.enabled=false
+
 server.port=8084
 spring.application.name=appointment-service
-spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.fail-fast=true
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
