--- a/K8s/doctor-service.yml
+++ b/K8s/doctor-service.yml
@@ -21,17 +21,58 @@ spec:
           ports:
             - containerPort: 8083
           env:
-            - name: SPRING_CLOUD_CONFIG_URI
-              valueFrom:
-                configMapKeyRef:
-                  name: common-config
-                  key: SPRING_CLOUD_CONFIG_URI
-
             - name: EUREKA_SERVER_ADDRESS
               valueFrom:
                 configMapKeyRef:
                   name: common-config
                   key: EUREKA_SERVER_ADDRESS
+
+            - name: SPRING_DATASOURCE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_DATASOURCE_URL
+
+            - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+
+            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_HIBERNATE_DDL_AUTO
+
+            - name: SPRING_JPA_SHOW_SQL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_SHOW_SQL
+
+            - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+
+            - name: SPRING_JPA_DATABASE_PLATFORM
+              valueFrom:
+                configMapKeyRef:
+                  name: common-config
+                  key: SPRING_JPA_DATABASE_PLATFORM
+
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: username
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: password
 
             
 
