--- a/K8s/mysql.yaml
+++ b/K8s/mysql.yaml
@@ -16,23 +16,11 @@ spec:
         - name: mysql
           image: mysql:8
           env:
-            # - name: MYSQL_ROOT_PASSWORD
-            #   valueFrom:
-            #     secretKeyRef:
-            #       name: mysql-secret
-            #       key: mysql-root-password
             - name: MYSQL_ROOT_PASSWORD
-              value: mysecret123
-            - name: MYSQL_USER
               valueFrom:
                 secretKeyRef:
                   name: mysql-secret
-                  key: SPRING_DATASOURCE_USERNAME
-            - name: MYSQL_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: SPRING_DATASOURCE_PASSWORD
+                  key: mysql-root-password
           ports:
             - containerPort: 3306
           volumeMounts:
@@ -55,6 +43,3 @@ spec:
   ports:
     - port: 3306
       targetPort: 3306
-
-
-
