Added resource limits

--- a/K8s/appointment-service.yml
+++ b/K8s/appointment-service.yml
@@ -73,6 +73,15 @@ spec:
                 secretKeyRef:
                   name: mysql-secret
                   key: password
+
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+
             
 ---
 apiVersion: v1
