--- a/K8s/server-registry.yml
+++ b/K8s/server-registry.yml
@@ -50,6 +50,14 @@ spec:
                 configMapKeyRef:
                   name: eureka-cm
                   key: eureka_service_address
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+
 
 
 ---                  
