--- a/K8s/api-gateway.yml
+++ b/K8s/api-gateway.yml
@@ -38,6 +38,14 @@ spec:
                 configMapKeyRef:
                   name: api-gateway-config
                   key: EUREKA_SERVER_ADDRESS
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+
 
 ---
 apiVersion: v1
