--- a/K8s/auth-service.yml
+++ b/K8s/auth-service.yml
@@ -93,6 +93,15 @@ spec:
                 configMapKeyRef:
                   name: jwt-config
                   key: jwt.expiration
+
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+
 ---
 apiVersion: v1
 kind: Service
