--- a/K8s/config-server.yml
+++ b/K8s/config-server.yml
@@ -26,6 +26,14 @@ spec:
                 configMapKeyRef:
                   name: common-config
                   key: EUREKA_SERVER_ADDRESS
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+
             # - name: SPRING_DATASOURCE_URL
             #   valueFrom:
             #     configMapKeyRef:
