--- a/K8s/mysql.yaml
+++ b/K8s/mysql.yaml
@@ -21,6 +21,13 @@ spec:
                 secretKeyRef:
                   name: mysql-secret
                   key: mysql-root-password
+          resources:
+            requests:
+              memory: "2Gi"
+              cpu: "250m"
+            limits:
+              memory: "4Gi"
+              cpu: "1"
           ports:
             - containerPort: 3306
           volumeMounts:
@@ -30,6 +37,7 @@ spec:
         - name: mysql-storage
           persistentVolumeClaim:
             claimName: mysql-pvc-new
+      restartPolicy: Always
 
 ---
 
