--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -2,10 +2,19 @@ server {
     listen 80;
     server_name localhost;
     
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Handle React routing
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
+    }
+
+    # Handle static files
+    location /static {
+        expires 1y;
+        add_header Cache-Control "public";
     }
 
     # Proxy pass to API Gateway
