--- a/K8s/api-gateway.yml
+++ b/K8s/api-gateway.yml
@@ -53,7 +53,7 @@ kind: Service
 metadata:
   name: api-gateway-svc
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: api-gateway-app
   ports:
