--- a/K8s/frontend-service.yml
+++ b/K8s/frontend-service.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: frontend:latest
+          image: bhavya28122251/frontend:latest
           ports:
             - containerPort: 80
           resources:
@@ -28,14 +28,14 @@ spec:
               cpu: "200m"
           env:
             - name: REACT_APP_API_URL
-              value: "http://api-gateway-svc:80"
+              value: "/api"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: LoadBalancer  
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
