--- a/K8s/api-gateway.yml
+++ b/K8s/api-gateway.yml
@@ -40,10 +40,10 @@ spec:
                   key: EUREKA_SERVER_ADDRESS
           resources:
             requests:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "250m"
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "500m"
 
 
