--- a/K8s/appointment-service.yml
+++ b/K8s/appointment-service.yml
@@ -76,12 +76,11 @@ spec:
 
           resources:
             requests:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "250m"
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "500m"
-
             
 ---
 apiVersion: v1
