--- a/K8s/auth-service.yml
+++ b/K8s/auth-service.yml
@@ -96,10 +96,10 @@ spec:
 
           resources:
             requests:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "250m"
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "500m"
 
 ---
