--- a/K8s/config-server.yml
+++ b/K8s/config-server.yml
@@ -28,10 +28,10 @@ spec:
                   key: EUREKA_SERVER_ADDRESS
           resources:
             requests:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "250m"
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "500m"
 
             # - name: SPRING_DATASOURCE_URL
