--- a/K8s/doctor-service.yml
+++ b/K8s/doctor-service.yml
@@ -75,10 +75,10 @@ spec:
                   key: password
           resources:
             requests:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "250m"
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "500m"
 
 
