--- a/K8s/server-registry.yml
+++ b/K8s/server-registry.yml
@@ -52,10 +52,10 @@ spec:
                   key: eureka_service_address
           resources:
             requests:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "250m"
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "500m"
 
 
@@ -73,5 +73,5 @@ spec:
     app: eureka
   type: NodePort
   ports:
-    - port: 80
+    - port: 8761
       targetPort: 8761
