Adding logging in Backend

--- a/Backend/patient-management/pom.xml
+++ b/Backend/patient-management/pom.xml
@@ -97,6 +97,15 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <!-- Logback JSON encoder -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
