--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -8,8 +8,8 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "/home/gitika/Documents/SPE-Major-Project2/SPE_Major_Project/Frontend/src/images/logo.jpg",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
