--- a/K8s/config/common-config.yml
+++ b/K8s/config/common-config.yml
@@ -3,9 +3,10 @@ kind: ConfigMap
 metadata:
   name: common-config
 data:
-  EUREKA_SERVER_ADDRESS: "http://eureka-0.eureka.default.svc.cluster.local:8761/eureka/"
-  #SPRING_CLOUD_CONFIG_URI: "http://config-server-svc.default.svc.cluster.local:8888"
-  SPRING_DATASOURCE_URL: "jdbc:mysql://mysql-svc.default.svc.cluster.local:3306/healthcare_db"
+  EUREKA_SERVER_ADDRESS: "http://eureka-0.eureka.healthcare-app.svc.cluster.local:8761/eureka/"
+  SPRING_DATASOURCE_URL: "jdbc:mysql://mysql-svc.healthcare-app.svc.cluster.local:3306/healthcare_db"
+  SPRING_DATASOURCE_USERNAME: "root"
+  SPRING_DATASOURCE_PASSWORD: "mysecret"
   SPRING_DATASOURCE_DRIVER_CLASS_NAME: "com.mysql.cj.jdbc.Driver"
   SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
   SPRING_JPA_SHOW_SQL: "true"
