--- a/K8s/services/mysql/deployment.yml
+++ b/K8s/services/mysql/deployment.yml
@@ -37,6 +37,8 @@ spec:
               mountPath: /var/lib/mysql
             - name: mysql-init-script
               mountPath: /docker-entrypoint-initdb.d
+            - name: mysql-socket
+              mountPath: /var/run/mysqld
       volumes:
         - name: mysql-storage
           persistentVolumeClaim:
@@ -44,4 +46,6 @@ spec:
         - name: mysql-init-script
           configMap:
             name: mysql-init-script
+        - name: mysql-socket
+          emptyDir: {}
       restartPolicy: Always
