--- a/Backend/patient-management/auth-service/src/main/resources/application.properties
+++ b/Backend/patient-management/auth-service/src/main/resources/application.properties
@@ -14,3 +14,6 @@ eureka.client.fetch-registry=true
 
 eureka.instance.hostname=${HOSTNAME}
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
+
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${HOSTNAME}:${server.port}
