--- a/K8s/microservices/api-gateway/service.yml
+++ b/K8s/microservices/api-gateway/service.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-gateway-svc
+  labels:
+    app: api-gateway-app
 spec:
   type: ClusterIP
   selector:
