--- a/K8s/services/service-registry/statefulset.yml
+++ b/K8s/services/service-registry/statefulset.yml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: eureka
+  labels:
+    app: eureka
 spec:
   serviceName: "eureka"
   replicas: 1
