--- a/elk/logstash/logstash-deployment.yml
+++ b/elk/logstash/logstash-deployment.yml
@@ -19,6 +19,13 @@ spec:
         ports:
         - containerPort: 5044
           name: beats
+        resources:
+          requests:
+            memory: "2Gi"
+            cpu: "1"
+          limits:
+            memory: "4Gi"
+            cpu: "2"
         volumeMounts:
         - name: logstash-config
           mountPath: /usr/share/logstash/pipeline/logstash.conf
